--- a/client/src/components/cartListItem/Cart.css
+++ b/client/src/components/cartListItem/Cart.css
@@ -2,10 +2,14 @@
   position: relative;
   border: 1px solid #ccc;
   transform: scaleY(0.98);
+  border: none;
+  display: grid;
+  grid-template-columns: 80% 20%;
 }
 .cart table {
   width: 100%;
   outline: none;
+  border-right: 2px solid;
 }
 .cart img {
   width: 100px;
@@ -39,6 +43,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  justify-content: center;
+  margin: auto;
 }
 
 .total h3 {
