--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -19,7 +19,6 @@ header a {
   color: black;
   display: inline-block;
   position: relative;
-  color: #0087ca;
 }
 
 header ul li {
@@ -28,7 +27,7 @@ header ul li {
 }
 
 /* active navlink */
-header .active:after {
+header a.active:after {
   content: '';
   position: absolute;
   width: 100%;
@@ -141,17 +140,57 @@ header {
 .user-icon:hover {
   color: orange;
 }
-.user-form .hide {
-  visibility: hidden;
-}
-.user-form div {
+
+.user-form {
   position: absolute;
-  z-index: 99999;
-  right: 40px;
+  z-index: 999999;
+  right: 15.5vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  top: 70px;
+  /* width: 320px;
+  padding: 20px;
+  max-height: 500px;
+  overflow: auto; */
   /* height: 100vh;
   margin: 40px; */
+}
+.user-tab {
+  width: 100px;
+  background-color: #fff;
+  z-index: 100;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 3px;
+  border-color: var(--e-global-color-border);
+  display: flex;
+  flex-direction: column;
+}
+.user-tab:after {
+  content: '';
+  position: absolute;
+  width: 98%;
+  transform: scaleX(1);
+  height: 3px;
+  bottom: 0;
+  left: 1px;
+  top: 1px;
+  background-color: #ff782c;
+}
+.user-tab li {
+  width: 100px;
+  min-height: 50px;
+  padding: 10px 0;
+}
+.logout {
+  border-top: 1px solid #eeee;
+}
+.logout button {
+  text-transform: uppercase;
+  color: black;
+  display: inline-block;
+  position: relative;
+  font-size: 1rem;
 }
