--- a/client/src/components/detailproduct/detailproduct.css
+++ b/client/src/components/detailproduct/detailproduct.css
@@ -36,19 +36,53 @@
 .DetailProduct {
   width: 100%;
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  padding: 50px;
+  padding: 50px 0;
   font-size: 150%;
   overflow: hidden;
 }
+.Img-Container {
+  width: 54%;
+  display: flex;
+  flex-direction: column;
+}
 
-.DetailProduct img {
-  max-width: 400px;
+.Current-image {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px;
+  border-style: dotted;
+  border-radius: 5px;
+}
+.Current-image img {
+  width: 50%;
   margin: 20px;
   height: 450px;
   transform-origin: 50%, 50%;
+  display: block;
+  transition: 0.3s ease-out;
+}
+.select-image img {
+  transition: 0.3s ease-out;
+}
+.select-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  border: 1px;
+  border-style: dotted;
+  border-radius: 5px;
+  width: 100px;
+  height: 100px;
+}
+.select-image img {
+  margin: 0;
+  width: 80%;
+  height: 80%;
+
   display: block;
 }
 
@@ -90,13 +124,12 @@
   word-wrap: break-word;
 }
 
-.box_detail div span {
+.stock span {
   width: 17%;
   font-size: 0.875rem;
   text-transform: capitalize;
   padding: 0 10px 0 13px;
   border-radius: 4px 4px 8px 8px;
-
   color: #fff;
   clip-path: polygon(0 0, 100% 0, 97% 100%, 4% 100%);
 }
@@ -106,9 +139,9 @@
 .OutOfStock {
   background-color: #fcb900;
 }
-.disabled-link {
+.disabled {
   pointer-events: none;
-  color: gray;
+  background-color: gray !important;
 }
 .addCartBtn {
   display: flex;
@@ -146,6 +179,7 @@
 }
 .quantity input {
   width: 40px;
+  text-align: center;
 }
 .minus {
   -webkit-border-top-left-radius: 200px;
@@ -162,4 +196,46 @@
   -moz-border-radius-bottomright: 200px;
   border-top-right-radius: 200px;
   border-bottom-right-radius: 200px;
+}
+.detail-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.detail-title {
+  font-size: 1.567rem;
+}
+.detail-price {
+  font-size: 1.3rem;
+  color: #ff782c;
+}
+.Total-reviews {
+  font-size: 0.875rem;
+}
+.Short-Decription-Container {
+  margin-top: 20px;
+  width: 100%;
+  overflow: auto;
+  text-align: left;
+}
+.Short-Decription-Container p {
+  font-size: 1rem;
+  color: rgb(61, 61, 61);
+}
+.detail-category {
+  width: 28%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  justify-content: space-between;
+}
+.detail-category {
+  font-size: 1rem;
+  color: rgb(61, 61, 61);
+}
+.select-image-container {
+  width: 48%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
