--- a/client/src/components/dashboard/createProduct/createproduct.css
+++ b/client/src/components/dashboard/createProduct/createproduct.css
@@ -68,7 +68,8 @@
 .create_product form {
   max-width: 500px;
   min-width: 290px;
-  width: 100%;
+  width: 50%;
+  margin-right: 20px;
 }
 
 .create_product form .row {
