--- a/client/src/components/carousel/carousel.css
+++ b/client/src/components/carousel/carousel.css
@@ -12,18 +12,54 @@
   display: flex;
   height: 100%;
   width: 100%;
+  overflow: hidden;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   background-color: #ffffff;
 }
+.carousel-left {
+  left: 10%;
+  position: absolute;
+  z-index: 10;
+  /* margin: auto 10%; */
+  text-align: left;
+  width: 30%;
+  top: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.carousel-right {
+  position: absolute;
+}
+
+.toShop {
+  margin-top: 1rem;
+  background-color: #551a88;
+  font-size: 1.3rem;
+  padding: 10px;
+  border: 1px solid rgb(117, 115, 115);
+  border-radius: 10px;
+}
+.toShop a {
+  color: #ffff;
+}
+.special {
+  text-transform: uppercase;
+  color: #ff782c;
+}
+/* .carousel-left span {
+  color: black !important;
+} */
 
 .carousel-item {
   display: flex;
   position: relative;
-  flex-direction: column;
   flex: 1 0 100%;
   scroll-snap-align: start;
+  border: 1px px solid #e3e1e1 !important;
+  overflow: hidden;
 }
 
 .carousel-item a {
@@ -64,6 +100,7 @@
   position: absolute;
   bottom: 0;
   left: 45%;
+  bottom: 5px;
 }
 .carouselindicator-wrap {
   display: flex;
