--- a/client/src/utils/productitem/ProductItem.css
+++ b/client/src/utils/productitem/ProductItem.css
@@ -1,121 +1,210 @@
-
-.Product_card{
-    max-width: 300px ;
-    overflow: hidden ;
-    height: 500px ;
-    padding: 15px ;
-    box-shadow: 0 0 15px #ddd ;
-    margin: 10px 0 ;
-    position: relative ;
-    border-radius: 20px;
+.Product_card {
+  max-width: 300px;
+  overflow: hidden;
+  max-height: 500px;
+  padding: 15px;
+  /* box-shadow: 0 0 15px #ddd; */
+  margin: 10px 0;
+  position: relative;
+  border-radius: 20px;
 }
-.Card_level_level{
-    font-size: 0.9em;
-}
-.Card_level_number {
-    font-size: 1.4em;
-}
-.Product_card .Card_level{
-    text-align: center;
-    right: 0;
-    top: 0px;
-    position: absolute;
-    width: 20%;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-    border-bottom-left-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    color: white;
-}
-.Product_card img {
-    width: 100% ;
-    height: 300px ;
-    display: block ;
-    /* object-fit: cover ; */
+.Card_Discount_Discount {
+  display: inline-block;
+  position: absolute;
+  text-align: center;
+  font-size: 14px;
+  font-size: 0.875rem;
+  text-transform: capitalize;
+  font-weight: var(--e-global-typography-primary-font-weight);
+  top: 10px;
+  left: 10px;
+  padding: 0 13px;
+  border-radius: 4px 4px 8px 8px;
+  background-color: #ff004c;
+  color: #fff !important;
+  clip-path: polygon(0 0, 100% 0, 97% 100%, 4% 100%);
 }
 
-.Product_card h2{
-    width: 100% ;
-    text-overflow: ellipsis ;
-    overflow: hidden ;
-    white-space: nowrap ;
-    text-transform: capitalize ;
-    cursor: pointer ;
-    color: #323232;
+.priceDiscount span {
+  margin-left: 5px;
+}
+.priceDiscount .discountPrice {
+  color: #ff782c;
+}
+.priceDiscount .del {
+  text-decoration: line-through;
+  color: #999;
 }
 
-.Product_card span{
-    color: crimson;
+.Product_card_imgContainer {
+  border: 1px dashed;
+  border-color: #e5e5e5;
+  border-radius: 4px;
+  overflow: hidden;
+  width: 100%;
+  padding: 50px;
+  position: relative;
+}
+.Product_card_imgContainer:hover {
+  border-color: #ff782c;
+}
+.Product_card_addtocart {
+  position: absolute;
+  bottom: -20px;
+  opacity: 0;
+  transition: all 3s ease-out;
+}
+.Product_card_imgContainer:hover .Product_card_addtocart {
+  opacity: 100%;
+  bottom: 0;
+}
+.Product_card_view {
+  position: absolute;
+  top: 10%;
+  right: -20px;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.Product_card_view a {
+  width: 35px;
+  height: 35px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 60%;
+  border: 1px solid rgb(214, 212, 212);
+  background-color: #ffff;
+  transition: all 0.3s;
+}
+.Product_card_view a:hover {
+  background-color: #ff782c;
+  color: #fff;
+}
+.Product_card_imgContainer:hover .Product_card_view {
+  opacity: 100%;
+  right: 10px;
+}
+.Product_card_imgContainer img {
+  width: 100%;
+  height: 200px;
+  display: block;
 }
 
-.Product_card p{
-    width: 100%;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    height: 40px;
-    overflow: hidden;
-    color : #323232;
+.Product_card h2 {
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  text-transform: capitalize;
+  cursor: pointer;
+  color: #323232;
 }
 
-.row_btn{
-    width: 100% ;
-    margin-top: 10px ;
-    display: flex ;
-    justify-content: space-between ;
+.Product_card .price {
+  color: #6839cc;
 }
 
-.row_btn a{
-    width: 50% ;
-    text-align: center ;
-    text-transform: uppercase ;
-    color: white ;
-    font-weight: 600 ;
-    letter-spacing: 2px ;
-    padding: 6px ;
+.Product_card p {
+  width: 100%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  height: 40px;
+  overflow: hidden;
+  color: #323232;
 }
-.Card_level>span{
-    color: rgb(255, 255, 255);
+
+.Card_level > span {
+  color: rgb(255, 255, 255);
 }
-#btn_buy{
-    background: #555 ;
-    margin: 5px ;
+
+.row_btn {
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.row_btn a {
+  width: 50%;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 600;
+  letter-spacing: 2px;
+  padding: 6px;
+}
+.product_box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.product_item_Name {
+  color: black;
+  transition: all 0.3s;
+}
+.product_item_Name:hover {
+  color: #ff782c;
+}
+.tooltip {
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  right: 43px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+/* #btn_buy {
+  background: #555;
+  margin: 5px;
 }
 
 #btn_view {
-    background: teal ;
-    margin: 5px ;
-}
-#LV5{
-    background-color: rgba(51, 204, 0, .9);
-    border: none;
-    box-shadow: -1px 1px 10px #5555;
+  background: teal;
+  margin: 5px;
+} */
+/* #LV5 {
+  background-color: rgba(51, 204, 0, 0.9);
+  border: none;
+  box-shadow: -1px 1px 10px #5555;
 }
 
 #LV6 {
-    background-color: rgba(0, 102, 255, .9);
-    border: none;
-    box-shadow: -1px 1px 10px #5555;
-
+  background-color: rgba(0, 102, 255, 0.9);
+  border: none;
+  box-shadow: -1px 1px 10px #5555;
 }
 #LV7 {
-    background-color: rgba(51, 0, 255, .9);
-    border: none;
-    box-shadow: -1px 1px 10px #5555;
+  background-color: rgba(51, 0, 255, 0.9);
+  border: none;
+  box-shadow: -1px 1px 10px #5555;
 }
 #LV8 {
-    background-color: rgba(153, 0, 255, .9);
-    border: none;
-    box-shadow: -1px 1px 10px #5555;
+  background-color: rgba(153, 0, 255, 0.9);
+  border: none;
+  box-shadow: -1px 1px 10px #5555;
 }
 #LV9 {
-    background-color: rgba(255, 222, 0, .9);
-    border: none;
-    box-shadow: -1px 1px 10px #5555;
+  background-color: rgba(255, 222, 0, 0.9);
+  border: none;
+  box-shadow: -1px 1px 10px #5555;
 }
 #LV10 {
-    background-color: rgba(204, 0, 0, .9);
-    border: none;
-    box-shadow: -1px 1px 10px #5555;
-}
+  background-color: rgba(204, 0, 0, 0.9);
+  border: none;
+  box-shadow: -1px 1px 10px #5555;
+} */
