--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -135,12 +135,12 @@ header {
 .user-form {
   position: absolute;
   z-index: 999999;
-  right: 15.5vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  top: 70px;
+  /* top: 70px;
+  right: 15.5vw; */
   /* width: 320px;
   padding: 20px;
   max-height: 500px;
@@ -156,7 +156,7 @@ header {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  top: 20px;
+  top: 10%;
   width: 100px;
   background-color: #fff;
   border-width: 1px;
