--- a/client/src/components/cartListItem/Cart.css
+++ b/client/src/components/cartListItem/Cart.css
@@ -41,6 +41,7 @@
   width: 100%;
   height: 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   justify-content: center;
@@ -49,4 +50,13 @@
 
 .total h3 {
   color: crimson;
+}
+@media (width < 700px) {
+  .cart {
+    display: flex;
+    flex-direction: column;
+  }
+  .total {
+    margin: 20px 0;
+  }
 }
