--- a/client/src/components/categoryScroller/CategoryScroller.css
+++ b/client/src/components/categoryScroller/CategoryScroller.css
@@ -1,11 +1,12 @@
 .media-scroller {
   display: grid;
-  gap: 30px;
+  gap: 55px;
   grid-auto-flow: column;
-  grid-auto-columns: 21%;
+  grid-auto-columns: 200px;
   padding: 0 30px 30px;
   overflow-x: auto;
   overscroll-behavior-inline: contain;
+  scroll-behavior: smooth;
 }
 
 .media-element {
@@ -16,14 +17,14 @@
   background: var(--surface-2);
   border-radius: var(--radius-2);
   box-shadow: var(--shadow-2);
+  padding: 15px;
 }
 .media-element a:hover {
-  color: orange;
+  color: #ff782c;
 }
 .imgContainer {
   position: relative;
   border-radius: 50%;
-  border: 1px solid;
   display: flex;
   width: 150px;
   height: 150px;
@@ -31,22 +32,23 @@
   align-items: center;
   overflow: hidden;
   margin: auto;
+  background-color: #fff;
+  box-shadow: 0 0 10px 0 #555353;
+  /* -webkit-box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 1); */
 }
 .media-element div > img {
   inline-size: 100%;
   aspect-ratio: 16 / 9;
   object-fit: cover;
-}
-.media-element > img {
-  inline-size: 100%;
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.snaps-inline {
+/* .snaps-inline {
   scroll-snap-type: inline mandatory;
-  scroll-padding-inline: var(--_spacer, 1rem);
-}
+  scroll-padding-inline: var(100%, 1rem);
+} */
 
 .snaps-inline > * {
   scroll-snap-align: start;
@@ -62,4 +64,28 @@
 .flow {
   display: grid;
   gap: var(--size-3);
+}
+
+.scoller-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+.scoller-btn button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+
+  border-radius: 50%;
+  background-color: #fff;
+}
+.scoller-btn button:hover {
+  background-color: #ff782c;
+}
+
+.media-scroller::-webkit-scrollbar {
+  height: 0;
+  width: 0;
 }
