--- a/client/src/components/rating/productRating.css
+++ b/client/src/components/rating/productRating.css
@@ -11,21 +11,34 @@
   display: flex;
   flex-direction: row;
   background-color: #ffffff;
+  padding: 10px 0;
 }
 .Reviews-user {
   display: flex;
   flex-direction: column;
-  width: 4%;
-  height: 45px;
-  background: #efefef;
   align-items: center;
-  justify-content: center;
-  border-radius: 50%;
   margin-right: 10px;
 }
 .Reviews-content {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  padding: 25px 40px;
+  border: 1px solid #f7f7f7;
+  border-radius: 5px;
+  position: relative;
+  background-color: #f7f7f7;
+}
+.Reviews-content::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-right: 12px solid #f7f7f7;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  left: -13px;
+  top: 17px;
 }
 .Reviews-content span {
   padding: 2px 0;
