--- a/client/src/components/sidebar/SideBar.css
+++ b/client/src/components/sidebar/SideBar.css
@@ -17,12 +17,11 @@
 }
 
 .Product_Page_SideBar {
-  width: 250px;
-
+  width: 100%;
   margin: 30px 0px;
   border: 1px solid black;
-  margin-right: 30px;
 
+  padding: 15px;
   overflow: hidden;
   border: none;
 }
@@ -103,4 +102,25 @@
   font-size: 1.2em;
   color: crimson;
   margin: 10px 0 10px;
+}
+
+@media (width < 600px) {
+  .SideBarMenu {
+    display: block;
+    margin-top: 20px;
+  }
+  .menuSidebar {
+    display: inline;
+    position: absolute;
+    left: 10px;
+  }
+  .Product_Page_SideBar {
+    padding-top: 60px;
+    position: absolute;
+    z-index: 10000;
+    width: 100%;
+    top: -50px;
+    background-color: #ffff;
+    transition: all 1s;
+  }
 }
