--- a/client/src/components/dashboard/order/order.css
+++ b/client/src/components/dashboard/order/order.css
@@ -3,53 +3,72 @@
     justify-content: space-between ;
 } */
 .dashboard_btn {
-    width: 250px;
-    display: flex;
-    justify-content: space-between;
-    text-transform: capitalize;
-    margin: 20px 0 10px;
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
+  text-transform: capitalize;
+  margin: 20px 0 10px;
 }
 
 .admin_order {
-    overflow: auto;
-    width: 100%;
-    padding: 20px 0;
+  overflow: auto;
+  width: 100%;
+  padding: 20px 0;
 }
 
 .admin_order h2 h4 {
-    text-align: center;
-    margin: 20px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+  text-align: center;
+  margin: 20px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .admin_order table {
-    margin: auto;
-    width: 100%;
+  margin: auto;
+  width: 100%;
 }
 
 .admin_order table,
 th,
 tr,
 td {
-    border: 1px solid #ddd;
-    border-collapse: collapse;
+  border: 1px solid #ddd;
+  border-collapse: collapse;
 }
 
 th,
 td {
-    text-align: center;
-    padding: 10px;
-    text-transform: capitalize;
+  text-align: center;
+  padding: 10px;
+  text-transform: capitalize;
 }
 
 table a {
-    color: rgb(9, 23, 83);
+  color: rgb(9, 23, 83);
 }
 
 .admin_order img {
-    width: 70px;
-    height: 50px;
-    display: block;
-    object-fit: fill;
+  width: 70px;
+  height: 50px;
+  display: block;
+  object-fit: fill;
+}
+.Status {
+  color: #fff;
+  border-radius: 8px;
+  border-radius: #ddd;
+  transition: all 1s;
+  text-align: center;
+}
+#Pending {
+  background-color: #c89600;
+}
+#Shipping {
+  background-color: #c89600;
+}
+#Cancel {
+  background-color: #a51d2a;
+}
+#Complete {
+  background-color: #208637;
 }
