--- a/client/src/components/cartListItem/Cart.css
+++ b/client/src/components/cartListItem/Cart.css
@@ -4,12 +4,12 @@
   transform: scaleY(0.98);
   border: none;
   display: grid;
-  grid-template-columns: 80% 20%;
+  grid-template-columns: 70% 20%;
+  justify-content: center;
 }
 .cart table {
   width: 100%;
   outline: none;
-  border-right: 2px solid;
 }
 .cart img {
   width: 100px;
@@ -39,17 +39,43 @@
 
 .total {
   width: 100%;
-  height: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  min-height: 200px;
+  margin-left: 20px !important;
   justify-content: space-between;
   justify-content: center;
   margin: auto;
+  border: 1px solid;
+  padding: 20px;
 }
 
 .total h3 {
+  text-align: left;
   color: crimson;
+  margin-bottom: 10px;
+}
+.total_wrap {
+  display: flex;
+
+  flex-direction: column;
+  align-items: flex-start;
+}
+.total_wrap_span {
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px #ddd solid;
+}
+.Checkout {
+  width: 100%;
+  margin-top: 10px;
+  font-size: 0.875rem;
+  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  color: #fff;
+  height: 30px;
+  background-color: crimson;
 }
 @media (width < 700px) {
   .cart {
