--- a/client/src/components/blog/blogcard/BlogCard.css
+++ b/client/src/components/blog/blogcard/BlogCard.css
@@ -183,6 +183,7 @@
 .Blog_Title {
   line-height: 40px;
   font-weight: 700;
+  height: 80px;
   font-size: 1rem;
   text-transform: capitalize;
   text-align: left;
