--- a/client/src/components/dashboard/brand/brand.css
+++ b/client/src/components/dashboard/brand/brand.css
@@ -1,50 +1,68 @@
-.categories{
-    max-width: 700px ;
-    display: flex ;
-    flex-wrap: wrap ;
-    justify-content: space-around ;
-    margin: 30px auto ;
+.categories {
+  max-width: 700px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 30px auto;
 }
 
-.categories form{
-    width: 290px ;
-    margin-bottom: 20px ;
-    padding: 10px ;
+.categories form {
+  width: 290px;
+  margin-bottom: 20px;
+  padding: 10px;
 }
 
-.categories label{
-    display: block ;
-    font-weight: 700 ;
-    letter-spacing: 2px ;
-    text-transform: uppercase ;
-    margin-bottom: 10px ;
+.categories label {
+  display: block;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
-.categories input button{
-    height: 35px ;
-    border : none ;
-    outline : none ;
-    border-bottom : 1px solid #555 ;
+.categories input button {
+  height: 35px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #555;
 }
 
 .categories input {
-    width: 210px ;
+  width: 210px;
 }
 
 .categories button {
-    width: 70px ;
-    background : #555 ;
-    color : white ;
-    margin-left: 10px ;
+  width: 70px;
+  background: #555;
+  color: white;
+  margin-left: 10px;
 }
 
-.categories .row{
-    min-width : 290px ;
-    display: flex ;
-    justify-content: space-between ;
-    align-items: center ;
-    padding: 10px ;
-    margin-bottom: 10px ;
-    border: 1px solid #ccc ;
-    background-color: rgb(255 255 255);;
+.categories .row {
+  min-width: 290px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  background-color: rgb(255 255 255);
+}
+.brand_btn {
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  align-items: flex-start;
+  margin: 10px;
+  justify-content: space-between;
+}
+.Brand-form button {
+  width: 100px;
+  height: 20px;
+  background: #555;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 700;
+  margin: 10px;
 }
