--- a/client/src/components/detailproduct/detailproduct.css
+++ b/client/src/components/detailproduct/detailproduct.css
@@ -235,8 +235,17 @@
   color: rgb(61, 61, 61);
 }
 .select-image-container {
-  width: 48%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  cursor: pointer;
+}
+.select-image-container #image1 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.select-image-container .active {
+  border-color: #ff782c;
+}
+.select-image:hover {
+  border-color: #ff782c;
 }
