--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -140,6 +140,7 @@ header {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  color: black;
   /* top: 70px;
   right: 15.5vw; */
   /* width: 320px;
@@ -165,6 +166,7 @@ header {
   border-radius: 3px;
   border-color: var(--e-global-color-border);
 }
+
 .user-tab:after {
   content: '';
   position: absolute;
