--- a/client/src/components/product/product.css
+++ b/client/src/components/product/product.css
@@ -4,7 +4,7 @@
 .Products {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
   background: fixed;
   justify-items: center;
   margin: 20px 0;
@@ -12,7 +12,7 @@
 .ProductsnoGird {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
   background: fixed;
   justify-items: center;
   margin: 20px 0;
