--- a/client/src/components/detailproduct/detailproduct.css
+++ b/client/src/components/detailproduct/detailproduct.css
@@ -100,7 +100,7 @@
 }
 .products {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
   background: fixed;
   justify-items: center;
 }
